--- a/parallax/index.html
+++ b/parallax/index.html
@@ -8,7 +8,7 @@
 	<style>
 	html{font-size:64px;}
 	body{
-		overflow:hidden;
+		/*overflow:hidden;*/
 		margin:0;padding:0;
 		font-family:'alegreya_sansregular';
 	}
@@ -34,7 +34,7 @@
 	.welcome{
 		width:100%;/* height:727px; *//* 后期为了自适应需要改为js设置 */
 		font-size:16px;
-		position:relative;	
+		position:relative;
 	}
 	.points1{
 		position:absolute;width:1031px;height:733px;margin-left:-590px;
@@ -46,7 +46,7 @@
 		letter-spacing:0.2em;font-size:6em;
 													/*font-size大小为1em*//*找到父级的em*/
 		text-align:center;
-		position:absolute;top:50%;
+		position:relative;top:50%;margin-bottom:0.5em;
 	}
 	.text_shadow{
 		text-shadow:rgba(24, 230, 152, 0.498039) -9.23px -8.24px 0px;
@@ -253,7 +253,7 @@
     
 	}
 	.bgBox,.bgS{
-		position:absolute;width:100%;height:100%;
+		position:absolute;width:100%;height:100%;overflow:hidden;
 	}
 	.bg{
 		position:absolute;width:110%;height:100%;background:url('img/bg_body.jpg');
