--- a/parallax/index.html
+++ b/parallax/index.html
@@ -5,321 +5,7 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 	<title>index</title>
 	<link rel="stylesheet" href="css/font.css">
-	<style>
-	html{font-size:64px;}
-	body{
-		/*overflow:hidden;*/
-		margin:0;padding:0;
-		font-family:'alegreya_sansregular';
-	}
-	p{padding:0;}
-	a{text-decoration:none;}
-	h1,h2,h3,h4,h5,h6 {
-	    font-size: 100%;
-	    font-weight: normal;
-	    margin:0;
-	    color:#18E698;
-	}
-	img{
-		border:none;vertical-align:top;
-	}
-
-	#wrap{
-		width:100%;position:relative;height:auto;
-	}
-	/*.bg{
-		width:110%;height:100%;background:url('img/bg_body.jpg');
-		position:absolute;top:0;left:0; 
-	}*/
-	.welcome{
-		width:100%;/* height:727px; *//* 后期为了自适应需要改为js设置 */
-		font-size:16px;
-		position:relative;
-	}
-	.points1{
-		position:absolute;width:1031px;height:733px;margin-left:-590px;
-		background:url('img/points1.png');top:71px;left:50%;
-    	
-	}
-	.welcome h1{
-		width:100%;font-family:'alegreya_sansthin';
-		letter-spacing:0.2em;font-size:6em;
-													/*font-size大小为1em*//*找到父级的em*/
-		text-align:center;
-		position:relative;top:50%;margin-bottom:0.5em;
-	}
-	.text_shadow{
-		text-shadow:rgba(24, 230, 152, 0.498039) -9.23px -8.24px 0px;
-	}
-	.loadProgress{
-		background:#18E698;
-		width:100%;height:2px;
-	}
-	.load img{
-		position:absolute;top:2px;z-index:10;
-	}
-	header{
-		position:relative;height: 85px;
-	}
-	nav{
-		font-size:0.25rem;position:absolute;
-		background:rgba(34,36,48,1);
-		top:0;width:100%;z-index:1;
-	}
-	nav img{margin:10px;}
-	nav a{
-		color:#FFF;font-size:0.75em;letter-spacing:0.2em;
-		margin:0 35px;line-height:85px;
-	}
-	nav .right{
-		float:right;
-	}
-	span.right{
-		height:85px;line-height:85px;
-	}
-	nav a.lang{margin:0 10px;}
-	nav span{color:#FFF;}
-	/*.path{border:1px solid red;}*/
-	section{font-size:0.25em;}
-	.content1,.content2,.content3,.content4{
-		text-align:center;width:100%;position:relative;
-	}
-	.content1 h2,.content2 h2,.content3 h2,.content4 h2{
-		font-size:4.375em;letter-spacing:0.2em;
-		margin-bottom:0.5em;font-family:'alegreya_sansthin';
-	}
-	.content1 p{
-		font-size:1.125em;color:#BFC0C1;letter-spacing:0.2em;
-	}
-	.content2 .item{
-		display:inline-block;width:150px;margin-left:40px;
-		vertical-align:top;position:relative;
-	}
-	.content2 .item:before{
-		content:'';background:url(img/arrow.png);
-		display:inline-block;width:12px;height:14px;
-		position:absolute;top:65px;left:-30px;
-	}
-	.content2 .item:nth-of-type(1):before{
-		display:none;
-	}
-	.content2 .item h3{
-		font-size: 19px;letter-spacing:0.2em;
-	}
-	.content2 .item p{
-		color:#FFF;font-size:18px;line-height:1.8em;letter-spacing:0.2em;
-	}
-	.content3 .item{
-		width:70%;max-width:355px;
-		display:inline-block;
-		margin:0 30px 60px 30px;letter-spacing:0.2em;
-	}
-	.content3 .pic{
-		position:relative;
-		overflow:hidden;
-	}
-	.content3 .pic img{
-		width:100%;
-	}
-	.content3 h3{
-		color:#FFF;font-size:0.8em;
-		margin-top:10px;
-	}
-	.content4 h3{
-		margin-bottom:20px;letter-spacing:0.2em;font-size:1.2em;
-	}
-	.content4 h3 span:nth-of-type(1){
-		color:#FFF;
-	}
-	.content4 .item{
-		position:relative;
-	}
-	.content4 .item .video_bar{
-		position:relative;
-		margin:0 auto;max-width:814px;
-		width:94%;
-	}
-	.vvvv{
-		height:457px;
-	}
-	.more {
-		position:absolute;top:50px;left:100%;margin-left:15px;
-	}
-	.more a{
-		display:block;width:56px;height:56px;
-		right:0;
-	}
-	.more a:nth-of-type(1){
-		background:url('img/btn_all.png');
-	}
-	.more a:nth-of-type(2){
-		background:url('img/btn_more.png');margin-top:20px;
-	}
-	.content4 .item .btn a{
-		width:64px;height:64px;display:block;position:absolute;
-		top:50%;margin-top:-33px;
-	}
-	.content4 .item .btn a:nth-of-type(1){
-		background:url('img/btn_prev.png') #22242A center no-repeat;
-		left:40px;
-	}
-	.content4 .item .btn a:nth-of-type(2){
-		background:url('img/btn_next.png') #22242A center no-repeat;
-		right:40px;
-	}
-	.btn .btn_shadow{
-		border:1px solid #18E598;height:100%;height:100%;
-	}
-	.shadow2{
-		position:absolute;top:-100%;transition:all 0.4s;
-	}
-	.shadow1{
-		position:absolute;top:100%;transition:all 0.4s;
-	}
-	.main_pic{
-		opacity:0;
-		position:absolute;
-		transition:all 0.4s;
-	}
-	.pic:hover .shadow2,.pic:hover .shadow1{
-		top:0;
-	}
-	.pic:hover .main_pic{
-		opacity:1;transition-delay:0.4s;
-	}
-	.contorls_bar{
-		width:100%;max-width:650px;height:63px;
-		margin:30px auto;background:#22242A;
-	}
-	.contorls_bar .play{
-		width:63px;height:63px;
-		background:url('img/play.png') no-repeat center;
-		position:relative;float:left;
-	}
-	.contorls_bar .play:hover input{
-		width:63px;
-	}
-	.contorls_bar .play input{
-		width:0;height:63px;transition: all 0.2s;
-		border:none;padding:0;top:0;left:0;
-		background:url('img/play.png') #18E598 no-repeat center;
-		position:absolute;
-	}
-	.contorl{
-		float:left;width:79%;max-width:546px;
-	}
-	.contorls_bar .total{
-		display:inline-block;
-		background:#55575B;width:100%;height:1px;
-		margin:30px 0 0 15px;position:relative;text-align:left;
-	}
-	.played{
-		display:inline-block;background:#18E598;
-		height:1px;position:absolute;
-		width:230px;
-	}
-	.contorls_bar .circle{
-		display:inline-block;border-radius:5px;
-		width:10px;height:10px;background:#fff;
-		position:absolute;right:0;top: -5px;
-	}
-	footer{
-		text-align:center;background:#22242A;
-		padding:20px 40px;
-		font-size:16px;position:relative;
-	}
-	footer h3{
-		font-size: 23px;color:#FFF;letter-spacing:0.2em;
-		font-family: 'futura_ltlight';
-	}
-	footer img{
-		float:left;
-	}
-	footer a{
-		color:#18E698;font-size:0.8em;letter-spacing:0.2em;
-	}
-	footer a span{
-		color:#FFF;
-	}
-	.path{
-		text-align:center;position:relative;
-	}
-	.path1{
-		margin-top:-252px;
-	}
-	.points2{
-		width: 1031px;height: 733px;position: absolute;top: 95px;left: 50%;
-    	margin-left: -590px;background: url('img/points2.png');
-    
-	}
-	.bgBox,.bgS{
-		position:absolute;width:100%;height:100%;overflow:hidden;
-	}
-	.bg{
-		position:absolute;width:110%;height:100%;background:url('img/bg_body.jpg');
-		z-index:-1;top:0;
-	}
-	.bgS{
-		display:none;background:url('img/bgS.jpg');
-	}
-	.point{
-		position:absolute;width:100%;height:100%;
-		background:url('img/point.png') top center;
-	}
-	.cuadros1{
-		background:url('img/cuadros.png') 50% 2000px;height: 100%;width: 110%;
-		position:absolute;top: -10px;left:0;/*transition:2s cubic-bezier(.2,.61,0,.99);*/
-		/* margin-left:-5%; 
-		transition:background-position 2s cubic-bezier(.2,.61,0,.99); }*/
-	}
-	.cuadros2{
-		position:absolute;top:0;left:0;height:100%;width:110%;
-		background:url('img/cuadros.png') calc(50% - 75px) 1200px;
-		opacity: 0.45;
-		/*  margin-left:-5%; 
-		transition:background-position 2s cubic-bezier(.2,.61,0,.99); */
-	}
-	@media screen and (max-width:1024px){
-		nav a{
-			margin:0 12px;
-		}
-	}
-	@media screen and (max-width:900px){
-		.welcome h1{
-			font-size:4em;
-		}
-		.content1 h2,.content2 h2,.content3 h2,.content4 h2{
-			font-size:3.5em;
-		}
-	}
-	@media screen and (max-width:768px){
-		nav,.load img{
-			display:none;
-		}
-	}
-	@media screen and (max-width:600px){
-		.path,.bgBox,.points1{
-			display:none;
-		}
-		.content1,.content2,.content3,.content4{
-			margin-bottom:100px;
-		}
-		.bgS{
-			display:block;
-		}
-
-	}
-	@media screen and (max-width:480px){
-		.welcome h1{
-			font-size:3em;
-		}
-		.content1 h2,.content2 h2,.content3 h2,.content4 h2{
-			font-size:2.5em;
-		}
-	}
-
-
-	</style>
+	<link rel="stylesheet" href="css/main.css">
 	<script src='js/jquery-3.1.1.min.js'></script>
 	<script src='js/skroll.js'></script>
 	<script src='js/tweenmax.min.js'></script>
@@ -329,8 +15,15 @@
 </head>
 <body>
 	<div id='wrap'>
-		<div class='load'>
+		<div class='preload'>
 			<div class="loadProgress"></div>
+			<div class='loadding'>
+				<img src="img/loading.jpg" alt="loading">
+				<div class='load_shadow'></div>
+			</div>
+		</div>
+		<div class='afterload'>
+			<div class='loaded'></div>
 			<img src="img/logo.png" alt="logo">
 		</div>
 		<div class='bgBox'>
@@ -343,7 +36,7 @@
 		</div>
 		<div class='welcome'>
 			<div class="points1"></div>
-			<h1 class='text_shadow'>STRATEGIC SOUND</h1>
+			<h1 class='text_shadow'>HELLO WORLD</h1>
 		</div>
 		<header>
 			<nav>
